welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int
 required: Int
	var x : Int = 0; x= a%;
                             ^lastDigit:3: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int
 required: Int
	var y : Int = 0; y= b%;
                             ^