welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
	var x : Int = 0; x= a%;
	var y : Int = 0; y= b%;
	if (x==y) true else false
}
